--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,3 +5,10 @@ Version: 0.0.1
 Encoding: UTF-8
 URL: https://github.com/mknyga/LearnR3
 BugReports: https://github.com/mknyga/LearnR3/issues
+Imports: 
+    here
+Depends: 
+    fs,
+    readr,
+    snakecase,
+    tidyverse
