--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,9 @@ Encoding: UTF-8
 URL: https://github.com/mknyga/LearnR3
 BugReports: https://github.com/mknyga/LearnR3/issues
 Imports: 
-    here
-Depends: 
+    here,
     fs,
     readr,
-    snakecase,
+    snakecase
+Depends:
     tidyverse
